Fix spacing on manager screens from top

--- a/src/components/manager/Analytic.scss
+++ b/src/components/manager/Analytic.scss
@@ -1,5 +1,5 @@
 .analytic-container {
-  margin-top: 70px;
+  margin-top: 150px;
   width: 96%;
   margin-left: 2%;
 
