--- a/src/components/manager/CreateCategory.scss
+++ b/src/components/manager/CreateCategory.scss
@@ -1,4 +1,4 @@
-@import "../../base";
+@import '../../base';
 
 .new-category {
   color: $base-white;
@@ -7,7 +7,7 @@
   height: 300px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 12em;
+  margin-top: 150px;
   display: block;
   border-radius: 6px;
   border-width: 1px;
