--- a/src/components/manager/CreateItem.scss
+++ b/src/components/manager/CreateItem.scss
@@ -1,4 +1,4 @@
-@import "../../base";
+@import '../../base';
 
 .new-menu-item {
   color: $base-dark;
@@ -7,7 +7,7 @@
   height: 480px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 12em;
+  margin-top: 150px;
   display: block;
   border-radius: 6px;
   border-width: 1px;
