--- a/src/components/manager/ManagerNav.scss
+++ b/src/components/manager/ManagerNav.scss
@@ -1,7 +1,7 @@
-@import "../../base";
+@import '../../base';
 
 #manager-nav-bar {
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 #manager-nav-bar {
